[package]
name = "crypto-primality"
description = "Implementation of primality tests for multi-precision numbers using crypto-bigint"
homepage = "https://github.com/saltatory/primality"
repository = "https://github.com/saltatory/primality"
version = "0.1.1"
edition = "2021"
authors = ["Jeffrey Hohenstein <jeffrey.hohenstein@gmail.com>"]
license = "BUSL-1.1"

[dependencies]
crypto-bigint = "0.6.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false

# Add rendering of LaTeX math symbols in documentation
#
# Example: to generate docs locally
#
# RUSTDOCFLAGS="--html-in-header $(pwd)/katex-header.html"
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
