[package]
name = "ziglet-primality"
description = "Implementation of primality tests for multi-precision numbers using crypto-bigint"
homepage = "https://github.com/ziglet-io/primality"
repository = "https://github.com/ziglet-io/primality"
readme = "README.md"

version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true

[dependencies]
crypto-bigint.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false

# Add rendering of LaTeX math symbols in documentation
#
# Example: to generate docs locally
#
# RUSTDOCFLAGS="--html-in-header $(pwd)/katex-header.html"
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
